create startup `MonthOpenCloseAss` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2471,6 +2471,18 @@
   "boilerplate.containers.Payroll.assessment.hiringData": "تاريخ التوظيف",
   "boilerplate.containers.Payroll.assessment.currentMainJobDuties": "الواجبات الرئيسية الحالية للوظيفة",
   "boilerplate.containers.Payroll.assessment.employees": "الموظفين",
+  "boilerplate.containers.Payroll.assessment.branch": "الفرع",
+  "boilerplate.containers.Payroll.assessment.month": "الشهر",
+  "boilerplate.containers.Payroll.assessment.year": "السنة",
+  "boilerplate.containers.Payroll.assessment.title": "العنوان",
+  "boilerplate.containers.Payroll.assessment.arTitle": "العنوان بالعربية",
+  "boilerplate.containers.Payroll.assessment.openAssessmentToEditFor": "فتح التقييم للتحرير لصالح",
+  "boilerplate.containers.Payroll.assessment.openMonth": "فتح الشهر",
+  "boilerplate.containers.Payroll.assessment.closeMonth": "إغلاق الشهر",
+  "boilerplate.containers.Payroll.assessment.stopEmployeeSelfAssessment": "إيقاف تقييم الموظف الذاتي",
+  "boilerplate.containers.Payroll.assessment.reset": "إعادة تعيين",
+  "boilerplate.containers.Payroll.assessment.resetPeerAppraisalSetting": "إعادة تعيين إعداد تقييم الأقران",
+  "boilerplate.containers.Payroll.assessment.thisActionWillResetPeerAppraisalForAllEmployeeInCurrentMonth": "هذا الإجراء سيعيد تعيين تقييم الأقران لجميع الموظفين في الشهر الحالي",
   "boilerplate.containers.Payroll.assessment.addEmployee": "إضافة موظف",
   "boilerplate.containers.Payroll.assessment.editEmployee": "تعديل الموظف",
   "boilerplate.containers.Payroll.assessment.noEmployees": "لا يوجد موظفين",
