--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2435,6 +2435,18 @@
   "boilerplate.containers.Payroll.assessment.otherPleaseSpecify": "Other Please Specify",
   "boilerplate.containers.Payroll.assessment.resources": "Resources",
   "boilerplate.containers.Payroll.assessment.upload": "Upload",
+  "boilerplate.containers.Payroll.assessment.branch": "Branch",
+  "boilerplate.containers.Payroll.assessment.month": "Month",
+  "boilerplate.containers.Payroll.assessment.year": "Year",
+  "boilerplate.containers.Payroll.assessment.title": "Title",
+  "boilerplate.containers.Payroll.assessment.arTitle": "Arabic Title",
+  "boilerplate.containers.Payroll.assessment.openAssessmentToEditFor": "Open Assessment To Edit For",
+  "boilerplate.containers.Payroll.assessment.openMonth": "Open Month",
+  "boilerplate.containers.Payroll.assessment.closeMonth": "Close Month",
+  "boilerplate.containers.Payroll.assessment.stopEmployeeSelfAssessment": "Stop Employee Self Assessment",
+  "boilerplate.containers.Payroll.assessment.reset": "Reset",
+  "boilerplate.containers.Payroll.assessment.resetPeerAppraisalSetting": "Reset Peer Appraisal Setting",
+  "boilerplate.containers.Payroll.assessment.thisActionWillResetPeerAppraisalForAllEmployeeInCurrentMonth": "This Action Will Reset Peer Appraisal For All Employee In Current Month",
   "boilerplate.containers.Payroll.assessment.invalidFileName": "Invalid file name",
   "boilerplate.containers.Payroll.assessment.fileExtensionShouldBePdf": "File extension should be pdf",
   "boilerplate.containers.Payroll.assessment.fileSizeShouldBeLessThan10MB": "File size should be less than 10MB",
