--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2541,5 +2541,7 @@
   "boilerplate.containers.Payroll.assessment.Prev": "السابق",
   "boilerplate.containers.Payroll.assessment.Next": "التالي",
   "boilerplate.containers.Payroll.assessment.finish": "إنهاء",
-  "boilerplate.containers.Payroll.assessment.TypeHereAdditionalInfo": "...اكتب هنا معلومات إضافية"
+  "boilerplate.containers.Payroll.assessment.TypeHereAdditionalInfo": "...اكتب هنا معلومات إضافية",
+  "boilerplate.containers.Payroll.assessment.AssessmentUnderReview": "التقييم تحت المراجعة",
+  "boilerplate.containers.Payroll.assessment.AssessmentDurationEnded": "انتهت مدة التقييم"
 }
