finish `AssessmentGuidelines` pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2473,6 +2473,7 @@
   "boilerplate.containers.Payroll.assessment.employees": "الموظفين",
   "boilerplate.containers.Payroll.assessment.branch": "الفرع",
   "boilerplate.containers.Payroll.assessment.month": "الشهر",
+  "boilerplate.containers.Payroll.assessment.noFilesUploaded": "لم يتم تحميل أي ملفات",
   "boilerplate.containers.Payroll.assessment.year": "السنة",
   "boilerplate.containers.Payroll.assessment.title": "العنوان",
   "boilerplate.containers.Payroll.assessment.arTitle": "العنوان بالعربية",
@@ -2492,6 +2493,7 @@
   "boilerplate.containers.Payroll.assessment.uploadAr": "تحميل بالعربية",
   "boilerplate.containers.Payroll.assessment.preview": "معاينة",
   "boilerplate.containers.Payroll.assessment.competenciesGuideline": "دليل الكفاءات",
+  "boilerplate.containers.Payroll.assessment.arabicCompetenciesGuideline": "دليل الكفاءات بالعربية",
   "boilerplate.containers.Payroll.assessment.rating": "التقييم",
   "boilerplate.containers.Payroll.assessment.performanceAppraisalPurpose": "هدف تقييم الأداء",
   "boilerplate.containers.Payroll.assessment.invalidFileName": "اسم ملف غير صالح",
