--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -974,6 +974,7 @@
   "boilerplate.containers.Payroll.totalvalue": "Total Loan",
   "boilerplate.containers.Payroll.paysNo": "Loan No",
   "boilerplate.containers.Payroll.copy": "Copy",
+  "boilerplate.containers.Payroll.review": "Review",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
@@ -2483,7 +2484,8 @@
   "boilerplate.containers.Payroll.assessment.finish": "Finish",
   "boilerplate.containers.Payroll.assessment.TypeHereAdditionalInfo": "Type here additional info...",
   "boilerplate.containers.Payroll.assessment.AssessmentUnderReview": "Assessment under review",
-  "boilerplate.containers.Payroll.assessment.AssessmentDurationEnded": "Assessment duration ended"
+  "boilerplate.containers.Payroll.assessment.AssessmentDurationEnded": "Assessment duration ended",
+  "boilerplate.containers.Payroll.assessment.monthAndYearErrorMes": "Must To Choose Year And Month"
 
 
   
