create startup `CareerDevPlan` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2512,6 +2512,19 @@
   "boilerplate.containers.Payroll.assessment.totalGrade": "الدرجة الإجمالية",
   "boilerplate.containers.Payroll.assessment.actions": "الإجراءات",
   "boilerplate.containers.Payroll.assessment.save": "حفظ",
+  "boilerplate.containers.Payroll.assessment.areaOfStrength": "مجال القوة",
+  "boilerplate.containers.Payroll.assessment.areaForDevelopment": "المجال للتطوير",
+  "boilerplate.containers.Payroll.assessment.departmentStructureStatus": "حالة هيكل القسم",
+  "boilerplate.containers.Payroll.assessment.actionPlanToImprove": "خطة العمل للتحسين",
+  "boilerplate.containers.Payroll.assessment.goals": "الأهداف",
+  "boilerplate.containers.Payroll.assessment.trainingNeeds": "احتياجات التدريب",
+  "boilerplate.containers.Payroll.assessment.other": "آخر",
+  "boilerplate.containers.Payroll.assessment.actionPlanResult": "نتيجة خطة العمل",
+  "boilerplate.containers.Payroll.assessment.descriptionOfActionPlanResult": "وصف نتيجة خطة العمل",
+  "boilerplate.containers.Payroll.assessment.effectiveOn": "فعّال في",
+  "boilerplate.containers.Payroll.assessment.actionPlanResultOther": "نتيجة خطة العمل الأخرى",
+  "boilerplate.containers.Payroll.assessment.effectiveOnOther": "فعّال في الآخر",
+  "boilerplate.containers.Payroll.assessment.careerDevPlanSection1Message": "أول خطوة في خطة التطوير المهني هي تقييم أداء الموظف وتحديد مجالات قوته وتطويره.",
   "boilerplate.containers.Payroll.assessment.close": "إغلاق",
   "boilerplate.containers.Payroll.assessment.addExample": "إضافة مثال",
   "boilerplate.containers.Payroll.assessment.noStuffFound": "لم يتم العثور على موظفين",
