--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2439,6 +2439,19 @@
   "boilerplate.containers.Payroll.assessment.branch": "Branch",
   "boilerplate.containers.Payroll.assessment.month": "Month",
   "boilerplate.containers.Payroll.assessment.year": "Year",
+  "boilerplate.containers.Payroll.assessment.areaOfStrength": "Area Of Strength",
+  "boilerplate.containers.Payroll.assessment.areaForDevelopment": "Area For Development",
+  "boilerplate.containers.Payroll.assessment.departmentStructureStatus": "Department Structure Status",
+  "boilerplate.containers.Payroll.assessment.actionPlanToImprove": "Action Plan To Improve",
+  "boilerplate.containers.Payroll.assessment.goals": "Goals",
+  "boilerplate.containers.Payroll.assessment.trainingNeeds": "Training Needs",
+  "boilerplate.containers.Payroll.assessment.other": "Other",
+  "boilerplate.containers.Payroll.assessment.actionPlanResult": "Action Plan Result",
+  "boilerplate.containers.Payroll.assessment.descriptionOfActionPlanResult": "Description Of Action Plan Result",
+  "boilerplate.containers.Payroll.assessment.effectiveOn": "Effective On",
+  "boilerplate.containers.Payroll.assessment.actionPlanResultOther": "Action Plan Result Other",
+  "boilerplate.containers.Payroll.assessment.effectiveOnOther": "Effective On Other",
+  "boilerplate.containers.Payroll.assessment.careerDevPlanSection1Message": "The first step in career development plan is  evaluating the employee performance and stating the employee areas of strengths and developments.",
   "boilerplate.containers.Payroll.assessment.title": "Title",
   "boilerplate.containers.Payroll.assessment.arTitle": "Arabic Title",
   "boilerplate.containers.Payroll.assessment.openAssessmentToEditFor": "Open Assessment To Edit For",
