finish`CareerDevPlan` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2517,12 +2517,22 @@
   "boilerplate.containers.Payroll.assessment.departmentStructureStatus": "حالة هيكل القسم",
   "boilerplate.containers.Payroll.assessment.actionPlanToImprove": "خطة العمل للتحسين",
   "boilerplate.containers.Payroll.assessment.goals": "الأهداف",
+  "boilerplate.containers.Payroll.assessment.newJobTitle": "المسمى الوظيفى الجديد",
+  "boilerplate.containers.Payroll.assessment.salaryReview": "مراجعه الراتب",
+  "boilerplate.containers.Payroll.assessment.promotion": "ترقية وظيفية",
+  "boilerplate.containers.Payroll.assessment.transferInAnotherDepartment": "النقل لادارة اخري",
+  "boilerplate.containers.Payroll.assessment.1-3-years": "1-3 سنوات",
+  "boilerplate.containers.Payroll.assessment.3-5-years": "3-5 سنوات",
+  "boilerplate.containers.Payroll.assessment.immediately": "فورا",
+  "boilerplate.containers.Payroll.assessment.nextQuarter": "الربع القادم",
+  "boilerplate.containers.Payroll.assessment.accept": "موافقة",
+  "boilerplate.containers.Payroll.assessment.refuse": "رفض",
   "boilerplate.containers.Payroll.assessment.trainingNeeds": "احتياجات التدريب",
   "boilerplate.containers.Payroll.assessment.other": "آخر",
   "boilerplate.containers.Payroll.assessment.actionPlanResult": "نتيجة خطة العمل",
   "boilerplate.containers.Payroll.assessment.descriptionOfActionPlanResult": "وصف نتيجة خطة العمل",
   "boilerplate.containers.Payroll.assessment.effectiveOn": "فعّال في",
-  "boilerplate.containers.Payroll.assessment.actionPlanResultOther": "نتيجة خطة العمل الأخرى",
+  "boilerplate.containers.Payroll.assessment.actionPlanResultOther": "وصف نتائج خطة العمل",
   "boilerplate.containers.Payroll.assessment.effectiveOnOther": "فعّال في الآخر",
   "boilerplate.containers.Payroll.assessment.careerDevPlanSection1Message": "أول خطوة في خطة التطوير المهني هي تقييم أداء الموظف وتحديد مجالات قوته وتطويره.",
   "boilerplate.containers.Payroll.assessment.close": "إغلاق",
