--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2446,10 +2446,20 @@
   "boilerplate.containers.Payroll.assessment.goals": "Goals",
   "boilerplate.containers.Payroll.assessment.trainingNeeds": "Training Needs",
   "boilerplate.containers.Payroll.assessment.other": "Other",
+  "boilerplate.containers.Payroll.assessment.newJobTitle": "New Job Title",
+  "boilerplate.containers.Payroll.assessment.salaryReview": "Salary Review",
+  "boilerplate.containers.Payroll.assessment.accept": "Accept",
+  "boilerplate.containers.Payroll.assessment.refuse": "Refuse",
+  "boilerplate.containers.Payroll.assessment.promotion": "Promotion",
+  "boilerplate.containers.Payroll.assessment.1-3-years": "1-3 Years",
+  "boilerplate.containers.Payroll.assessment.3-5-years": "3-5 Years",
+  "boilerplate.containers.Payroll.assessment.transferInAnotherDepartment": "Transfer In Another Department",
+  "boilerplate.containers.Payroll.assessment.immediately": "Immediately",
+  "boilerplate.containers.Payroll.assessment.nextQuarter": "Next Quarter",
   "boilerplate.containers.Payroll.assessment.actionPlanResult": "Action Plan Result",
   "boilerplate.containers.Payroll.assessment.descriptionOfActionPlanResult": "Description Of Action Plan Result",
   "boilerplate.containers.Payroll.assessment.effectiveOn": "Effective On",
-  "boilerplate.containers.Payroll.assessment.actionPlanResultOther": "Action Plan Result Other",
+  "boilerplate.containers.Payroll.assessment.actionPlanResultOther": "Action Plan Result Description",
   "boilerplate.containers.Payroll.assessment.effectiveOnOther": "Effective On Other",
   "boilerplate.containers.Payroll.assessment.careerDevPlanSection1Message": "The first step in career development plan is  evaluating the employee performance and stating the employee areas of strengths and developments.",
   "boilerplate.containers.Payroll.assessment.title": "Title",
