create startup `CompanyDocument` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1933,6 +1933,26 @@
   "boilerplate.containers.Payroll.MainData.codes.TransactionsTypes": "أنواع المعاملات",
   "boilerplate.containers.Payroll.MainData.codes.Upload": "رفع ملف",
   "boilerplate.containers.Payroll.MainData.codes.Submit": "إرسال",
+  "boilerplate.containers.Payroll.MainData.codes.category": "الفئة",
+  "boilerplate.containers.Payroll.MainData.codes.documentType": "نوع المستند",
+  "boilerplate.containers.Payroll.MainData.codes.documentDescription": "وصف المستند",
+  "boilerplate.containers.Payroll.MainData.codes.type": "النوع",
+  "boilerplate.containers.Payroll.MainData.codes.employeeInfo": "معلومات الموظف",
+  "boilerplate.containers.Payroll.MainData.codes.addOrChangeEmployee": "إضافة أو تغيير الموظف",
+  "boilerplate.containers.Payroll.MainData.codes.branch": "الفرع",
+  "boilerplate.containers.Payroll.MainData.codes.department": "القسم",
+  "boilerplate.containers.Payroll.MainData.codes.section": "القسم",
+  "boilerplate.containers.Payroll.MainData.codes.allSupervisors": "جميع المشرفين",
+  "boilerplate.containers.Payroll.MainData.codes.allManagers": "جميع المديرين",
+  "boilerplate.containers.Payroll.MainData.codes.departmentName": "اسم القسم",
+  "boilerplate.containers.Payroll.MainData.codes.jobName": "اسم الوظيفة",
+  "boilerplate.containers.Payroll.MainData.codes.noEmployeeFound": "لم يتم العثور على موظف",
+  "boilerplate.containers.Payroll.MainData.codes.employeeName": "اسم الموظف",
+  "boilerplate.containers.Payroll.MainData.codes.close": "إغلاق",
+  "boilerplate.containers.Payroll.MainData.codes.save": "حفظ",
+  "boilerplate.containers.Payroll.MainData.codes.employeeCode": "رمز الموظف",
+  "boilerplate.containers.Payroll.MainData.codes.uploadFileErrorMes": "الملف كبير للغاية",
+  "boilerplate.containers.Payroll.MainData.codes.uploadAttachment": "تحميل المرفق",
   "boilerplate.containers.Payroll.MainData.codes.SubmitTooltip": "قم باستيراد ملف اكسيل واختر نوع المعاملات المطلوب إرسالها",
   "boilerplate.containers.Payroll.MainData.codes.Reset": "إعادة تعيين",
   "boilerplate.containers.Payroll.MainData.codes.Import": "استيراد",
