--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1871,6 +1871,26 @@
   "boilerplate.containers.Payroll.MainData.codes.ADD": "Add New",
   "boilerplate.containers.Payroll.MainData.codes.TransactionsTypes": "Transactions Types",
   "boilerplate.containers.Payroll.MainData.codes.Upload": "Upload",
+  "boilerplate.containers.Payroll.MainData.codes.category": "Category",
+  "boilerplate.containers.Payroll.MainData.codes.documentType": "Document Type",
+  "boilerplate.containers.Payroll.MainData.codes.documentDescription": "Document Description",
+  "boilerplate.containers.Payroll.MainData.codes.type": "Type",
+  "boilerplate.containers.Payroll.MainData.codes.employeeInfo": "Employee Info",
+  "boilerplate.containers.Payroll.MainData.codes.addOrChangeEmployee": "Add or Change Employee",
+  "boilerplate.containers.Payroll.MainData.codes.branch": "Branch",
+  "boilerplate.containers.Payroll.MainData.codes.department": "Department",
+  "boilerplate.containers.Payroll.MainData.codes.section": "Section",
+  "boilerplate.containers.Payroll.MainData.codes.allSupervisors": "All Supervisors",
+  "boilerplate.containers.Payroll.MainData.codes.allManagers": "All Managers",
+  "boilerplate.containers.Payroll.MainData.codes.departmentName": "Department Name",
+  "boilerplate.containers.Payroll.MainData.codes.jobName": "Job Name",
+  "boilerplate.containers.Payroll.MainData.codes.noEmployeeFound": "No Employee Found",
+  "boilerplate.containers.Payroll.MainData.codes.employeeName": "Employee Name",
+  "boilerplate.containers.Payroll.MainData.codes.close": "Close",
+  "boilerplate.containers.Payroll.MainData.codes.save": "Save",
+  "boilerplate.containers.Payroll.MainData.codes.employeeCode": "Employee Code",
+  "boilerplate.containers.Payroll.MainData.codes.uploadFileErrorMes": "Upload File Error Message",
+  "boilerplate.containers.Payroll.MainData.codes.uploadAttachment": "Upload Attachment",
   "boilerplate.containers.Payroll.MainData.codes.Submit": "Submit",
   "boilerplate.containers.Payroll.MainData.codes.SubmitTooltip": "Import Excel File And Choose Transactions Type To Can Submit",
   "boilerplate.containers.Payroll.MainData.codes.Reset": "Reset",
