create startup `profile` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -595,6 +595,12 @@
   "boilerplate.components.Profile.about.my_album": "ألبوماتي",
   "boilerplate.components.Profile.about.my_connection": "اتصالي",
   "boilerplate.components.Profile.about.my_interests": "اهتمامي",
+  "boilerplate.components.Profile.about.companyData": "بيانات الشركة",
+  "boilerplate.components.Profile.about.hrDocuments": "وثائق الموارد البشرية",
+  "boilerplate.components.Profile.about.policyDocuments": "وثائق السياسات",
+  "boilerplate.components.Profile.about.jobData": "بيانات الوظيفة",
+  "boilerplate.components.Profile.about.jobDescription": "وصف الوظيفة",
+  "boilerplate.components.Profile.about.jobKPI": "مؤشرات أداء الوظيفة",
   "boilerplate.components.Profile.about.see_all": "اظهار الكل",
   "boilerplate.components.Profile.connection.see_profile": "راجع ملف التعريف",
   "boilerplate.containers.LocaleToggle.zh": "简体中文",
