--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -593,6 +593,12 @@
   "boilerplate.components.Profile.tab.connections": "CONNECTIONS",
   "boilerplate.components.Profile.tab.albums": "ALBUMS",
   "boilerplate.components.Profile.about.my_album": "My Albums",
+  "boilerplate.components.Profile.about.companyData": "Company Data",
+  "boilerplate.components.Profile.about.hrDocuments": "HR Documents",
+  "boilerplate.components.Profile.about.policyDocuments": "Policy Documents",
+  "boilerplate.components.Profile.about.jobData": "Job Data",
+  "boilerplate.components.Profile.about.jobDescription": "Job Description",
+  "boilerplate.components.Profile.about.jobKPI": "Job KPI",
   "boilerplate.components.Profile.about.my_connection": "My Connection",
   "boilerplate.components.Profile.about.my_interests": "My Interest",
   "boilerplate.components.Profile.about.see_all": "See All",
