create startup `MonthCalender` component & add ti to profile > about tap

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -962,7 +962,18 @@
   "boilerplate.containers.Payroll.value": "القيمة",
   "boilerplate.containers.Payroll.Yearly": "سنويا",
   "boilerplate.containers.Payroll.Every3Years": "كل 3 سنوات",
-
+  "boilerplate.containers.Payroll.january": "يناير",
+  "boilerplate.containers.Payroll.february": "فبراير",
+  "boilerplate.containers.Payroll.march": "مارس",
+  "boilerplate.containers.Payroll.april": "أبريل",
+  "boilerplate.containers.Payroll.may": "مايو",
+  "boilerplate.containers.Payroll.june": "يونيو",
+  "boilerplate.containers.Payroll.july": "يوليو",
+  "boilerplate.containers.Payroll.august": "أغسطس",
+  "boilerplate.containers.Payroll.september": "سبتمبر",
+  "boilerplate.containers.Payroll.october": "أكتوبر",
+  "boilerplate.containers.Payroll.november": "نوفمبر",
+  "boilerplate.containers.Payroll.december": "ديسمبر",
   "boilerplate.containers.Payroll.saturday": "السبت",
   "boilerplate.containers.Payroll.sunday": "الاحد",
   "boilerplate.containers.Payroll.monday": "الاثنين",
