--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -958,7 +958,18 @@
   "boilerplate.containers.Payroll.deleteMessage": "Are You Sure You Want To Delete",
   "boilerplate.containers.Payroll.confirmation": "Are You Sure You Want To Save",
   "boilerplate.containers.Payroll.applynewshift": "Apply new shift",
-
+  "boilerplate.containers.Payroll.january": "January",
+  "boilerplate.containers.Payroll.february": "February",
+  "boilerplate.containers.Payroll.march": "March",
+  "boilerplate.containers.Payroll.april": "April",
+  "boilerplate.containers.Payroll.may": "May",
+  "boilerplate.containers.Payroll.june": "June",
+  "boilerplate.containers.Payroll.july": "July",
+  "boilerplate.containers.Payroll.august": "August",
+  "boilerplate.containers.Payroll.september": "September",
+  "boilerplate.containers.Payroll.october": "October",
+  "boilerplate.containers.Payroll.november": "November",
+  "boilerplate.containers.Payroll.december": "December",
   "boilerplate.containers.Payroll.employees": "View Employees",
 
   "boilerplate.containers.Payroll.VacationName": "Vacation",
