refactor profile page & move it to payroll directory

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -602,6 +602,18 @@
   "boilerplate.components.Profile.about.jobDescription": "وصف الوظيفة",
   "boilerplate.components.Profile.about.jobKPI": "مؤشرات أداء الوظيفة",
   "boilerplate.components.Profile.about.see_all": "اظهار الكل",
+  "boilerplate.components.Profile.about.employeeName": "اسم الموظف",
+  "boilerplate.components.Profile.about.jobName": "اسم الوظيفة",
+  "boilerplate.components.Profile.about.noJobKPI": "لا توجد وصف للأهداف الوظيفية",
+  "boilerplate.components.Profile.about.noJobDescription": "لا توجد وصف للوظيفة",
+  "boilerplate.components.Profile.about.aboutMe": "نبذة عني",
+  "boilerplate.components.Profile.about.address": "العنوان",
+  "boilerplate.components.Profile.about.phone": "الهاتف",
+  "boilerplate.components.Profile.about.email": "البريد الإلكتروني",
+  "boilerplate.components.Profile.about.hiringDate": "تاريخ التوظيف",
+  "boilerplate.components.Profile.about.reportingTo": "تقديم التقارير إلى",
+  "boilerplate.components.Profile.about.organization": "المؤسسة",
+  "boilerplate.components.Profile.about.noDocuments": "لا توجد وثائق",
   "boilerplate.components.Profile.connection.see_profile": "راجع ملف التعريف",
   "boilerplate.containers.LocaleToggle.zh": "简体中文",
   "boilerplate.containers.LocaleToggle.es": "󠁥󠁮󠁧󠁿Español",
