--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -602,6 +602,18 @@
   "boilerplate.components.Profile.about.my_connection": "My Connection",
   "boilerplate.components.Profile.about.my_interests": "My Interest",
   "boilerplate.components.Profile.about.see_all": "See All",
+  "boilerplate.components.Profile.about.employeeName": "Employee Name",
+  "boilerplate.components.Profile.about.jobName": "Job Name",
+  "boilerplate.components.Profile.about.aboutMe": "About Me",
+  "boilerplate.components.Profile.about.address": "Address",
+  "boilerplate.components.Profile.about.noJobKPI": "No Job KPI available",
+  "boilerplate.components.Profile.about.noJobDescription": "No Job Description available",
+  "boilerplate.components.Profile.about.reportingTo": "Reporting To",
+  "boilerplate.components.Profile.about.phone": "Phone",
+  "boilerplate.components.Profile.about.email": "Email",
+  "boilerplate.components.Profile.about.hiringDate": "Hiring Date",
+  "boilerplate.components.Profile.about.organization": "Organization",
+  "boilerplate.components.Profile.about.noDocuments": "No Documents",
   "boilerplate.components.Profile.connection.see_profile": "See Profile",
   "boilerplate.containers.LocaleToggle.zn": "简体中文",
   "boilerplate.containers.LocaleToggle.es": "󠁥󠁮󠁧󠁿Español",
