finish `SummaryPayslip` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1792,6 +1792,23 @@
     "boilerplate.containers.Payroll.Payroll.AddItem": "الكمية",
     "boilerplate.containers.Payroll.Payroll.EmpPrice": "السعر للموظف",
 
+    "boilerplate.containers.Payroll.Payroll.department": "القسم",
+    "boilerplate.containers.Payroll.Payroll.section": "اسم القسم",
+    "boilerplate.containers.Payroll.Payroll.employeeCode": "كود الموظف",
+    "boilerplate.containers.Payroll.Payroll.employeeName": "اسم الموظف",
+    "boilerplate.containers.Payroll.Payroll.allowances": "اجمالى المستحق",
+    "boilerplate.containers.Payroll.Payroll.deductions": "اجمالي الاستقطاعات",
+    "boilerplate.containers.Payroll.Payroll.netSalary": "صافي المستحق",
+    "boilerplate.containers.Payroll.Payroll.searchCriteria": "شروط البحث",
+    "boilerplate.containers.Payroll.Payroll.template": "القالب",
+    "boilerplate.containers.Payroll.Payroll.cash": "نقداً",
+    "boilerplate.containers.Payroll.Payroll.bankOnly": "البنك فقط",
+    "boilerplate.containers.Payroll.Payroll.reportCriteria": "بيانات العرض",
+    "boilerplate.containers.Payroll.Payroll.year": "السنة",
+    "boilerplate.containers.Payroll.Payroll.month": "الشهر",
+    "boilerplate.containers.Payroll.Payroll.detailed": "تفصيلي",
+    "boilerplate.containers.Payroll.Payroll.groupByDepartment": "مجمع بالادارة",
+
     "boilerplate.containers.Payroll.Payroll.PurchaseTrxCreateTitle": "اضافة مشتريات الموظف",
     "boilerplate.containers.Payroll.Payroll.PurchaseTrxUpdateTitle": "تعديل مشتريات الموظف",
     "boilerplate.containers.Payroll.Payroll.isPartCalc": "احتساب جزئي",
